# OddMath

./: .gitignore  LICENSE  build.sh  meson.build  meson.options  requirements.txt
.github/workflows/: linux-gtest.yml
Overflow/: meson.build
Overflow/include/: Overflow.h
Overflow/src/: Overflow.cpp  meson.build
scripts/: install_wraps.py
tests/: meson.build  test.cpp
